@@ -56,13 +56,17 @@ public class LaneDirectionOfTravelAggregator {
 
     /**
      * This function joins all of the events used by this aggregator into a LaneDirectionOfTravelAssessment.
-     * @param tolerance The allowable heading tolerance in degrees of vehicles for this assessment
+     * @param defaultHeadingTolerance The allowable heading tolerance in degrees of vehicles for this assessment
+     *        for segments other than the first.
+     * @param headingToleranceFirstSegment The heading tolerance for the first segment (nearest the intersection center)
+     *        of any lane
      * @param distanceTolerance The allowable distance tolerance in meters between the vehicle and the centerline
      * @param lookBackPeriodDays Specifies the number of days worth of data that should be included in the assessment. Events outside of this period are removed from the list and not included in the list. 
      * 
      */
     @JsonIgnore
-    public LaneDirectionOfTravelAssessment getLaneDirectionOfTravelAssessment(double tolerance, double distanceTolerance, long lookBackPeriodDays){
+    public LaneDirectionOfTravelAssessment getLaneDirectionOfTravelAssessment(double defaultHeadingTolerance,
+           double headingToleranceFirstSegment, double distanceTolerance, long lookBackPeriodDays){
 
 
         // Prune Events
@@ -120,7 +124,10 @@ public class LaneDirectionOfTravelAggregator {
 
                 group.setLaneID(entry.getKey());
                 group.setSegmentID(groups.getKey());
-                
+
+                // Choose heading tolerance depending on whether this is the first segment
+                double headingTolerance =
+                        group.getSegmentID() == 1 ? headingToleranceFirstSegment : defaultHeadingTolerance;;
                 
                 int inTolerance = 0;
                 int outOfTolerance = 0;
@@ -128,7 +135,7 @@ public class LaneDirectionOfTravelAggregator {
                 double expectedHeading = 0;
                 for(LaneDirectionOfTravelEvent event: groups.getValue()){
                     expectedHeading = event.getExpectedHeading();
-                    if(CircleMath.getAngularDistanceDegrees(event.getMedianVehicleHeading(), expectedHeading) > tolerance){
+                    if(CircleMath.getAngularDistanceDegrees(event.getMedianVehicleHeading(), expectedHeading) > headingTolerance){
                         outOfTolerance +=1;
                     }else{
                         inTolerance +=1;
@@ -145,7 +152,7 @@ public class LaneDirectionOfTravelAggregator {
                 group.setMedianInToleranceCenterlineDistance(MathFunctions.getMedian(inToleranceDistances));
                 group.setMedianCenterlineDistance(MathFunctions.getMedian(distances));
                 group.setMedianHeading(MathFunctions.getMedianHeading(headings));
-                group.setTolerance(tolerance);
+                group.setTolerance(headingTolerance);
                 group.setExpectedHeading(expectedHeading);
                 group.setDistanceFromCenterlineTolerance(distanceTolerance);
                 assessmentGroups.add(group);
@@ -181,17 +188,19 @@ public class LaneDirectionOfTravelAggregator {
 
     /**
      * This function returns an EventAssessment including a new Assessment, and the most recent event used to generate that Assessment.
-     * @param tolerance The allowable heading tolerance in degrees of vehicles for this assessment
+     * @param defaultHeadingTolerance The allowable heading tolerance in degrees of vehicles for this assessment
      * @param distanceTolerance The allowable distance tolerance in meters between the vehicle and the centerline
      * @param lookBackPeriodDays Specifies the number of days worth of data that should be included in the assessment. Events outside of this period are removed from the list and not included in the list. 
      * @return EventAssessment
      */
     @JsonIgnore
-    public EventAssessment getEventAssessmentPair(double tolerance, double distanceTolerance, long lookBackPeriodDays){
+    public EventAssessment getEventAssessmentPair(double defaultHeadingTolerance,
+           double headingToleranceFirstSegment, double distanceTolerance, long lookBackPeriodDays){
         EventAssessment eventAssessment =  new EventAssessment();
-        eventAssessment.setAssessment(getLaneDirectionOfTravelAssessment(tolerance, distanceTolerance, lookBackPeriodDays));
-        if(this.events.size() >0){
-            eventAssessment.setEvent(this.events.get(this.events.size()-1));
+        eventAssessment.setAssessment(getLaneDirectionOfTravelAssessment(
+                defaultHeadingTolerance, headingToleranceFirstSegment, distanceTolerance, lookBackPeriodDays));
+        if(!this.events.isEmpty()){
+            eventAssessment.setEvent(this.events.getLast());
         }
         return eventAssessment;
     }
